--- a/acoustid/Cargo.toml
+++ b/acoustid/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "~1"
 sha256 = "~1"
 thiserror = "~1"
 tokio = { version = "~1", default-features = false, features = ["rt-multi-thread"] }
+tower = { version = "~0.4", features = [ "limit", "util" ] }
 url = "~2"
 
 [dev-dependencies]
