--- a/precious.toml
+++ b/precious.toml
@@ -5,7 +5,7 @@ exclude = [
 [commands.rustfmt]
 type    = "both"
 include = "**/*.rs"
-cmd     = [ "cargo", "+nightly", "fmt", "--", "--unstable-features" ]
+cmd     = [ "rustfmt", "--edition", "2021" ]
 lint_flags = "--check"
 ok_exit_codes = [0]
 lint_failure_exit_codes = [1]
