Basic implementation of GRPC backend
It's kind of gross but it produces data.

--- a/acoustid/Cargo.toml
+++ b/acoustid/Cargo.toml
@@ -3,7 +3,7 @@ name = "acoustid"
 version = "0.0.1"
 authors = ["Dave Rolsky <autarch@urth.org>"]
 description = "Library for the acoustid API"
-repository = "https://github.com/houseabsolute/music-player"
+repository = "https://github.com/houseabsolute/Crumb"
 readme = "README.md"
 license = "Apache-2.0"
 edition = "2021"
