--- a/frontend/Cargo.toml
+++ b/frontend/Cargo.toml
@@ -3,7 +3,7 @@ version = "0.1.0"
 name = "frontend"
 authors = ["Dave Rolsky <autarch@urth.org>"]
 description = "Importer for the music player"
-repository = "https://github.com/houseabsolute/music-player"
+repository = "https://github.com/houseabsolute/Crumb"
 readme = "README.md"
 edition = "2021"
 
