--- a/importer/Cargo.toml
+++ b/importer/Cargo.toml
@@ -3,7 +3,7 @@ name = "crumb-importer"
 version = "0.0.1"
 authors = ["Dave Rolsky <autarch@urth.org>"]
 description = "Importer for the music player"
-repository = "https://github.com/houseabsolute/music-player"
+repository = "https://github.com/houseabsolute/Crumb"
 readme = "README.md"
 license = "AGPL-3.0"
 edition = "2021"
