--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -11,10 +11,13 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "~1", features = ["backtrace"] }
 crumb-db = { path = "../db" }
-crumb-rpc-proto = { path = "../rpc-proto" }
 futures = {version = "~0.3", default-features = false, features = ["alloc"]}
+prost = "~0.9"
 tokio = { version = "~1", features = ["macros", "rt-multi-thread"] }
-tonic = "~0.6"
+tonic = { version = "~0.6", features = [ "compression", "prost", "tls" ] }
 tracing = "~0.1"
 tracing-subscriber = "~0.3"
 uuid = "~0.8"
+
+[build-dependencies]
+tonic-build = { version = "~0.6", features = [ "compression" ] }
