More WIP on frontend

--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -9,6 +9,7 @@ license = "AGPL-3.0"
 edition = "2021"
 
 [dependencies]
+rust_decimal = "~1"
 env_logger = "~0.8"
 futures-util = "~0.3"
 itertools = "~0.10"
@@ -24,6 +25,7 @@ uuid = "~0.8"
 [dependencies.sqlx]
 version = "~0.5"
 features = [
+    "decimal",
     "runtime-tokio-native-tls",
     "postgres",
     "time",
