--- a/web-frontend/Cargo.toml
+++ b/web-frontend/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 async-channel = "~1"
 dioxus = { path = "../../dioxus", features = [ "router", "web" ] }
+#dioxus = { version = "~0.1, >= 0.1.8", features = ["router", "web"] }
+dioxus-heroicons = { path = "../../dioxus-heroicons" }
 gloo-storage = "~0.2"
 #grpc-web-client = { version = "~0.1", git = "https://github.com/titanous/grpc-web-client", rev = "dd15cde2f36ab10546c332a7bbcb55b1738018a5" }
 grpc-web-client = { version = "~0.1", path = "../../grpc-web-client/grpc-web-client" }
@@ -20,7 +22,18 @@ thiserror = "~1"
 tonic = { version = "~0.6", default-features = false, features = [ "codegen", "prost" ] }
 typed-builder = "~0.9"
 uuid = { version = "~0.8", features = [ "v4", "v5", "wasm-bindgen" ] }
+wasm-bindgen = "~0.2"
 wasm-logger = "~0.2"
+
+[dependencies.web-sys]
+version = "~0.3"
+features = [
+    "Document",
+    "Element",
+    "HtmlAudioElement",
+    "HtmlMediaElement",
+    "Window",
+]
 
 [build-dependencies]
 tonic-build = { version = "~0.6", default-features = false, features = [ "prost", "rustfmt" ] }
