--- a/web-frontend/Cargo.toml
+++ b/web-frontend/Cargo.toml
@@ -18,6 +18,7 @@ prost = "~0.9"
 prost-types = "~0.9"
 serde = { version = "~1", features = ["derive"] }
 serde_json = { version = "~1" }
+tailwindcss-to-rust-macros = { path = "../../tailwindcss-to-rust/macros" }
 thiserror = "~1"
 tonic = { version = "~0.6", default-features = false, features = [ "codegen", "prost" ] }
 typed-builder = "~0.9"
