--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -14,6 +14,7 @@ crumb-db = { path = "../db" }
 futures = {version = "~0.3", default-features = false, features = ["alloc"]}
 prost = "~0.9"
 prost-types = "~0.9"
+rust_decimal = "1.21.0"
 tokio = { version = "~1", features = ["macros", "rt-multi-thread"] }
 tonic = { version = "~0.6", features = [ "compression", "prost", "tls" ] }
 tonic-web = "~0.2"
