--- a/acoustid/Cargo.toml
+++ b/acoustid/Cargo.toml
@@ -9,17 +9,17 @@ license = "Apache-2.0"
 edition = "2021"
 
 [dependencies]
-anyhow = "~1"
-log = "~0.4"
-reqwest = { version = "~0.11", features = ["gzip", "json", "rustls"] }
-serde = { version = "~1", features = ["derive"] }
-serde_json = "~1"
-sha256 = "~1"
-thiserror = "~1"
-tokio = { version = "~1", default-features = false, features = ["rt-multi-thread"] }
-tower = { version = "~0.4", features = [ "limit", "util" ] }
-url = "~2"
+anyhow = "1.0.56"
+log = "0.4.16"
+reqwest = { version = "0.11.10", features = ["gzip", "json", "rustls"] }
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
+sha256 = "1.0.3"
+thiserror = "1.0.30"
+tokio = { version = "1.17.0", default-features = false, features = ["rt-multi-thread"] }
+tower = { version = "0.4.12", features = [ "limit", "util" ] }
+url = "2.2.2"
 
 [dev-dependencies]
-mockito = "~0.30"
-tokio = { version = "~1", default-features = false, features = ["macros", "rt-multi-thread"] }
+mockito = "0.31.0"
+tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread"] }
