--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,18 +9,18 @@ license = "AGPL-3.0"
 edition = "2021"
 
 [dependencies]
-anyhow = { version = "~1", features = ["backtrace"] }
+anyhow = { version = "1.0.56", features = ["backtrace"] }
 crumb-db = { path = "../db" }
-futures = {version = "~0.3", default-features = false, features = ["alloc"]}
-prost = "~0.9"
-prost-types = "~0.9"
+futures = { version = "0.3.21", default-features = false, features = ["alloc"] }
+prost = "0.10.1"
+prost-types = "0.10.1"
 rust_decimal = "1.21.0"
-tokio = { version = "~1", features = ["macros", "rt-multi-thread"] }
-tonic = { version = "~0.6", features = [ "compression", "prost", "tls" ] }
-tonic-web = "~0.2"
-tracing = "~0.1"
-tracing-subscriber = "~0.3"
-uuid = "~0.8"
+tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
+tonic = { version = "0.7.1", features = [ "compression", "prost", "tls" ] }
+tonic-web = "0.3.0"
+tracing = "0.1.33"
+tracing-subscriber = "0.3.11"
+uuid = "0.8.2"
 
 [build-dependencies]
-tonic-build = { version = "~0.6", features = [ "compression" ] }
+tonic-build = { version = "0.7.0", features = ["compression"] }
