--- a/importer/Cargo.toml
+++ b/importer/Cargo.toml
@@ -10,23 +10,23 @@ edition = "2021"
 
 [dependencies]
 acoustid = { path = "../acoustid" }
-anyhow = { version = "~1", features = ["backtrace"] }
-blake3 = "~1.2"
-clap = "3.0.0-beta"
+anyhow = { version = "1.0.56", features = ["backtrace"] }
+blake3 = "1.3.1"
+clap = "3.1.8"
 crumb-db = { path = "../db" }
-fern = { version = "~0.6", features = ["colored"] }
-id3 = "~0.6"
-itertools = "~0.10"
-jwalk = "~0.6"
-log = "~0.4"
-magic = "~0.12"
-mime = "~0.3"
-mime-detective = "~1"
-serde = { version = "~1", features = ["derive"] }
-serde_json = "~1"
+fern = { version = "0.6.0", features = ["colored"] }
+id3 = "1.0.2"
+itertools = "0.10.3"
+jwalk = "0.6.0"
+log = "0.4.16"
+magic = "0.12.2"
+mime = "0.3.16"
+mime-detective = "1.0.0"
+serde = { version = "1.0.136", features = ["derive"] }
+serde_json = "1.0.79"
 #sha256 = "~1"
-tokio = { version = "~1", default-features = false, features = ["macros", "rt-multi-thread", "tracing"] }
-uuid = { version = "~0.8" }
+tokio = { version = "1.17.0", default-features = false, features = ["macros", "rt-multi-thread", "tracing"] }
+uuid = "0.8.2"
 
 # chromaprint = "~0.1"
 # minimp3 = "~0.5"
