--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -19,6 +19,7 @@ rust_decimal = "~1"
 thiserror = "~1"
 time = "~0.2"
 tokio = { version = "~1", features = ["full"] }
+tokio-stream = "0.1.8"
 tracing = "~0.1"
 uuid = "~0.8"
 
