--- a/db/Cargo.toml
+++ b/db/Cargo.toml
@@ -9,22 +9,22 @@ license = "AGPL-3.0"
 edition = "2021"
 
 [dependencies]
-env_logger = "~0.8"
-futures-util = "~0.3"
-itertools = "~0.10"
-lazy-regex = "~2"
-log = "~0.4"
-once_cell = "~1"
-rust_decimal = "~1"
-thiserror = "~1"
-time = "~0.2"
-tokio = { version = "~1", features = ["full"] }
-tokio-stream = "0.1.8"
-tracing = "~0.1"
-uuid = "~0.8"
+env_logger = "0.9.0"
+futures-util = "0.3.21"
+itertools = "0.10.3"
+lazy-regex = "2.3.0"
+log = "0.4.17"
+once_cell = "1.13.0"
+rust_decimal = "1.25.0"
+thiserror = "1.0.31"
+time = "0.3.11"
+tokio = { version = "1.20.0", features = ["full"] }
+tokio-stream = "0.1.9"
+tracing = "0.1.35"
+uuid = "1.1.2"
 
 [dependencies.sqlx]
-version = "~0.5"
+version = "0.6.0"
 features = [
     "decimal",
     "runtime-tokio-native-tls",
